# elon-tweets

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: test_deploy.yml
elon_tweets/: main.py
elon_tweets/app/: app.py
elon_tweets/tests/: conftest.py  test_app.py
stubs/google/auth/: __init__.pyi  _cloud_sdk.pyi  _credentials_async.pyi  _default.pyi  _default_async.pyi  _helpers.pyi  _jwt_async.pyi  _service_account_info.pyi  app_engine.pyi  aws.pyi  downscoped.pyi  exceptions.pyi  external_account.pyi  identity_pool.pyi  impersonated_credentials.pyi  jwt.pyi
stubs/google/auth/compute_engine/: __init__.pyi  _metadata.pyi  credentials.pyi
stubs/google/auth/crypt/: _cryptography_rsa.pyi  es256.pyi
stubs/google/auth/transport/: __init__.pyi  _aiohttp_requests.pyi  _http_client.pyi  _mtls_helper.pyi  grpc.pyi  requests.pyi  urllib3.pyi
stubs/google/oauth2/: _client.pyi  _client_async.pyi  _credentials_async.pyi  _id_token_async.pyi  _reauth_async.pyi  _service_account_async.pyi  challenges.pyi  credentials.pyi  id_token.pyi  reauth.pyi  service_account.pyi  sts.pyi  utils.pyi
tests/: test_elon_tweets.py
