[tool.poetry]
name = "elon-tweets"
version = "0.1.0"
description = ""
authors = ["Jan Ciechowski <jan@multiply.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.0"
python-twitter = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
