[tool.poetry]
name = "elon-tweets"
version = "0.1.0"
description = ""
authors = ["Jan Ciechowski <janciechowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.0"
python-twitter = "^3.5"
google-cloud-datastore = "^2.1.0"
marshmallow = "^3.13.0"
black = "^21.8b0"
mypy = "^0.910"
Flask = "^2.0.1"
google-auth = "^2.0.2"
logger = "^1.4"
logging = "^0.4.9"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
